RESOLVED FIXED219310
[LFC Display] Fix box locations for positioned elements
https://bugs.webkit.org/show_bug.cgi?id=219310
Summary [LFC Display] Fix box locations for positioned elements
Simon Fraser (smfr)
Reported 2020-11-27 10:20:22 PST
[LFC Display] Fix box locations for positioned elements
Attachments
Patch (26.44 KB, patch)
2020-11-27 10:20 PST, Simon Fraser (smfr)
ews-feeder: commit-queue-
Patch (26.42 KB, patch)
2020-11-27 11:28 PST, Simon Fraser (smfr)
zalan: review+
ews-feeder: commit-queue-
Simon Fraser (smfr)
Comment 1 2020-11-27 10:20:36 PST
Simon Fraser (smfr)
Comment 2 2020-11-27 11:28:29 PST
alan
Comment 3 2020-11-27 14:26:37 PST
Comment on attachment 414960 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=414960&action=review > Source/WebCore/layout/layouttree/LayoutBox.h:233 > + return isInitialContainingBlock() || isPositioned() || style().hasTransform(); I'd change it to return isPositioned() || isContainingBlockForFixedPosition(); -which makes it quite clear that fixed positioning is a type of out-of-flow.
Simon Fraser (smfr)
Comment 4 2020-11-27 18:32:26 PST
Radar WebKit Bug Importer
Comment 5 2020-11-27 18:33:15 PST
Note You need to log in before you can comment on or make changes to this bug.