Source/WebCore/display/css/DisplayBoxFactory.cpp
@@ -29,6 +29,7 @@
 #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
 
 #include "DisplayBoxDecorationData.h"
+#include "DisplayBoxDecorationPainter.h"
 #include "DisplayContainerBox.h"
 #include "DisplayFillLayerImageGeometry.h"
 #include "DisplayImageBox.h"
@@ -81,11 +82,12 @@ std::unique_ptr<Box> BoxFactory::displayBoxForRootBox(const Layout::ContainerBox
     auto style = Style { rootLayoutBox.style(), styleForBackground };
 
     auto rootBox = makeUnique<ContainerBox>(snapRectToDevicePixels(borderBoxRect, m_pixelSnappingFactor), WTFMove(style));
-    setupBoxModelBox(*rootBox, rootLayoutBox, styleForBackground, geometry, { });
+    // We pass rootBox as its own containingBlockBox here to allow it to be a reference everywhere else.
+    setupBoxModelBox(*rootBox, rootLayoutBox, geometry, { *rootBox, { 0, 0 } }, styleForBackground);
     return rootBox;
 }
 
-std::unique_ptr<Box> BoxFactory::displayBoxForBodyBox(const Layout::Box& layoutBox, const Layout::BoxGeometry& geometry, RootBackgroundPropagation rootBackgroundPropagation, LayoutSize offsetFromRoot) const
+std::unique_ptr<Box> BoxFactory::displayBoxForBodyBox(const Layout::Box& layoutBox, const Layout::BoxGeometry& geometry, const ContainingBlockContext& containingBlockContext, RootBackgroundPropagation rootBackgroundPropagation) const
 {
     const RenderStyle* styleForBackground = &layoutBox.style();
     
@@ -93,20 +95,20 @@ std::unique_ptr<Box> BoxFactory::displayBoxForBodyBox(const Layout::Box& layoutB
         styleForBackground = nullptr;
     
     auto style = Style { layoutBox.style(), styleForBackground };
-    return displayBoxForLayoutBox(layoutBox, styleForBackground, geometry, offsetFromRoot, WTFMove(style));
+    return displayBoxForLayoutBox(layoutBox, geometry, containingBlockContext, styleForBackground, WTFMove(style));
 }
 
-std::unique_ptr<Box> BoxFactory::displayBoxForLayoutBox(const Layout::Box& layoutBox, const Layout::BoxGeometry& geometry, LayoutSize offsetFromRoot) const
+std::unique_ptr<Box> BoxFactory::displayBoxForLayoutBox(const Layout::Box& layoutBox, const Layout::BoxGeometry& geometry, const ContainingBlockContext& containingBlockContext) const
 {
     auto style = Style { layoutBox.style() };
-    return displayBoxForLayoutBox(layoutBox, &layoutBox.style(), geometry, offsetFromRoot, WTFMove(style));
+    return displayBoxForLayoutBox(layoutBox, geometry, containingBlockContext, &layoutBox.style(), WTFMove(style));
 }
 
-std::unique_ptr<Box> BoxFactory::displayBoxForLayoutBox(const Layout::Box& layoutBox, const RenderStyle* styleForBackground, const Layout::BoxGeometry& geometry, LayoutSize offsetFromRoot, Style&& style) const
+std::unique_ptr<Box> BoxFactory::displayBoxForLayoutBox(const Layout::Box& layoutBox, const Layout::BoxGeometry& geometry, const ContainingBlockContext& containingBlockContext, const RenderStyle* styleForBackground, Style&& style) const
 {
     // FIXME: Need to map logical to physical rects.
     auto borderBoxRect = LayoutRect { Layout::BoxGeometry::borderBoxRect(geometry) };
-    borderBoxRect.move(offsetFromRoot);
+    borderBoxRect.move(containingBlockContext.offsetFromRoot);
     auto pixelSnappedBorderBoxRect = snapRectToDevicePixels(borderBoxRect, m_pixelSnappingFactor);
 
     // FIXME: Handle isAnonymous()
@@ -118,21 +120,21 @@ std::unique_ptr<Box> BoxFactory::displayBoxForLayoutBox(const Layout::Box& layou
             image = cachedImage->image();
 
         auto imageBox = makeUnique<ImageBox>(pixelSnappedBorderBoxRect, WTFMove(style), WTFMove(image));
-        setupBoxModelBox(*imageBox, layoutBox, styleForBackground, geometry, offsetFromRoot);
+        setupBoxModelBox(*imageBox, layoutBox, geometry, containingBlockContext, styleForBackground);
         return imageBox;
     }
     
     if (is<Layout::ContainerBox>(layoutBox)) {
         // FIXME: The decision to make a ContainerBox should be made based on whether this Display::Box will have children.
         auto containerBox = makeUnique<ContainerBox>(pixelSnappedBorderBoxRect, WTFMove(style));
-        setupBoxModelBox(*containerBox, layoutBox, styleForBackground, geometry, offsetFromRoot);
+        setupBoxModelBox(*containerBox, layoutBox, geometry, containingBlockContext, styleForBackground);
         return containerBox;
     }
 
     return makeUnique<Box>(snapRectToDevicePixels(borderBoxRect, m_pixelSnappingFactor), WTFMove(style));
 }
 
-std::unique_ptr<Box> BoxFactory::displayBoxForTextRun(const Layout::LineRun& run, const Layout::InlineLineGeometry& lineGeometry, LayoutSize offsetFromRoot) const
+std::unique_ptr<Box> BoxFactory::displayBoxForTextRun(const Layout::LineRun& run, const Layout::InlineLineGeometry& lineGeometry, const ContainingBlockContext& containingBlockContext) const
 {
     ASSERT(run.text());
     auto lineRect = lineGeometry.lineBoxLogicalRect();
@@ -140,16 +142,16 @@ std::unique_ptr<Box> BoxFactory::displayBoxForTextRun(const Layout::LineRun& run
 
     auto runRect = LayoutRect { run.logicalLeft(), run.logicalTop(), run.logicalWidth(), run.logicalHeight() };
     runRect.moveBy(lineLayoutRect.location());
-    runRect.move(offsetFromRoot);
+    runRect.move(containingBlockContext.offsetFromRoot);
 
     auto style = Style { run.layoutBox().style() };
     return makeUnique<TextBox>(snapRectToDevicePixels(runRect, m_pixelSnappingFactor), WTFMove(style), run);
 }
 
-void BoxFactory::setupBoxGeometry(BoxModelBox& box, const Layout::Box&, const Layout::BoxGeometry& layoutGeometry, LayoutSize offsetFromRoot) const
+void BoxFactory::setupBoxGeometry(BoxModelBox& box, const Layout::Box&, const Layout::BoxGeometry& layoutGeometry, const ContainingBlockContext& containingBlockContext) const
 {
     auto borderBoxRect = LayoutRect { Layout::BoxGeometry::borderBoxRect(layoutGeometry) };
-    borderBoxRect.move(offsetFromRoot);
+    borderBoxRect.move(containingBlockContext.offsetFromRoot);
 
     auto paddingBoxRect = LayoutRect { layoutGeometry.paddingBox() };
     paddingBoxRect.moveBy(borderBoxRect.location());
@@ -169,7 +171,7 @@ void BoxFactory::setupBoxGeometry(BoxModelBox& box, const Layout::Box&, const La
     }
 }
 
-std::unique_ptr<BoxDecorationData> BoxFactory::constructBoxDecorationData(const Layout::Box& layoutBox, const RenderStyle* styleForBackground, const Layout::BoxGeometry& layoutGeometry, LayoutSize offsetFromRoot) const
+std::unique_ptr<BoxDecorationData> BoxFactory::constructBoxDecorationData(const Layout::Box& layoutBox, const Layout::BoxGeometry& layoutGeometry, const RenderStyle* styleForBackground, LayoutSize offsetFromRoot) const
 {
     auto boxDecorationData = makeUnique<BoxDecorationData>();
 
@@ -197,15 +199,15 @@ std::unique_ptr<BoxDecorationData> BoxFactory::constructBoxDecorationData(const 
     return boxDecorationData;
 }
 
-void BoxFactory::setupBoxModelBox(BoxModelBox& box, const Layout::Box& layoutBox, const RenderStyle* styleForBackground, const Layout::BoxGeometry& layoutGeometry, LayoutSize offsetFromRoot) const
+void BoxFactory::setupBoxModelBox(BoxModelBox& box, const Layout::Box& layoutBox, const Layout::BoxGeometry& layoutGeometry, const ContainingBlockContext& containingBlockContext, const RenderStyle* styleForBackground) const
 {
-    setupBoxGeometry(box, layoutBox, layoutGeometry, offsetFromRoot);
+    setupBoxGeometry(box, layoutBox, layoutGeometry, containingBlockContext);
 
     auto& renderStyle = layoutBox.style();
     if (!(styleForBackground && styleForBackground->hasBackground()) && !renderStyle.hasBorder())
         return;
 
-    auto boxDecorationData = constructBoxDecorationData(layoutBox, styleForBackground, layoutGeometry, offsetFromRoot);
+    auto boxDecorationData = constructBoxDecorationData(layoutBox, layoutGeometry, styleForBackground, containingBlockContext.offsetFromRoot);
     box.setBoxDecorationData(WTFMove(boxDecorationData));
 }
 
